--- a/sampling-min-max/index.html
+++ b/sampling-min-max/index.html
@@ -16,7 +16,7 @@
     <div class="item item--5">and</div>
     <div class="item item--6">Grid</div>
     <div class="item item--7">is</div>
-    <div class="item item--8">Great</div>
+    <div class="item item--8">Greatdsja aaaaaaaaaaa aaaaaaaaaaaaaaaaa aaaaaaaaaa aaaaaaaaa aaaaaaaa aaaaaaaaaaaa aaaaaaaa</div>
   </div>
 </body>
 </html>
